# vulkan-thingie

./: .gitignore  CMakeLists.txt
src/: main.cpp  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_types.h
vendor-libs/vma/: vma_impl_definition.cpp
